--- a/DateDifference/packages.config
+++ b/DateDifference/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NodaTime" version="1.1.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
+  <package id="TimePeriodLibrary.NET" version="1.4.11" targetFramework="net40" />
 </packages>
